--- a/roles/bench_fioseq/templates/fio_job.j2
+++ b/roles/bench_fioseq/templates/fio_job.j2
@@ -79,5 +79,6 @@ spec:
             --filesize={{ bench_fioseq_fsz_gb }}g 
             --numjobs={{ bench_fioseq_njobs }} 
             --output=/benchout/fio.seqread.run.txt 
+            ; ls -l /dataset > /benchout/fio.seqread.ls_l.txt
       restartPolicy: Never
 ...
