reworked bench_fiorand

--- a/roles/bench_fiorand/templates/fio_job.j2
+++ b/roles/bench_fiorand/templates/fio_job.j2
@@ -29,7 +29,7 @@ spec:
           claimName: fio-pv-claim
       - name: config-volume
         configMap:
-          name: kubuculum-state
+          name: {{ bench_fiorand_configmap }}
       containers:
       - name: benchmark-complete
         image: rhel7
@@ -62,14 +62,12 @@ spec:
             --numjobs={{ bench_fiorand_njobs }} 
             --output=/benchout/fio.initwrite.run.txt 
             ; ls -l /dataset > /benchout/fio.initwrite.ls_l.txt
-      - name: fio-prepwait
+      - name: prepwait
         image: rhel7
         volumeMounts:
           - mountPath: /runstatus
             name: config-volume
-          - mountPath: /benchout
-            name: output-volume
-        command: ["/bin/sh", "-c", "while [ `cat /runstatus/bench.mode` = 'prepare' ]; do sleep 30; done"]
+        command: ["/bin/sh", "-c", "while [ `cat /runstatus/{{ bench_fiorand_mapkey }}` = {{ bench_fiorand_initphase }} ]; do sleep 30; done"]
       - name: fio-randomread
         image: quay.io/mpillai/fio
         volumeMounts:
