--- a/roles/bench_ycsb/templates/ycsb_job.j2
+++ b/roles/bench_ycsb/templates/ycsb_job.j2
@@ -12,6 +12,9 @@ spec:
       volumes:
       - name: output-volume
         emptyDir: {}
+      - name: config-volume
+        configMap:
+          name: {{ benchmark_configmap }}
       containers:
       - name: benchmark-complete
         image: rhel7
@@ -37,6 +40,12 @@ spec:
             -p recordcount={{ bench_ycsb_reccount }}
             -threads {{ bench_ycsb_load_thrds }} 
             2>&1 | tee /benchout/ycsb.load.txt
+      - name: prepwait
+        image: rhel7
+        volumeMounts:
+          - mountPath: /runstatus
+            name: config-volume
+        command: ["/bin/sh", "-c", "while [ `cat /runstatus/{{ benchmark_mapkey }}` = 'prepare' ]; do sleep 30; done"]
       - name: ycsb-run
         image: quay.io/mpillai/ycsb
         volumeMounts:
