--- a/roles/calm_fioiops/templates/fio_statefulset.j2
+++ b/roles/calm_fioiops/templates/fio_statefulset.j2
@@ -28,6 +28,10 @@ spec:
         role: calm-fioiops
     spec:
       terminationGracePeriodSeconds: 10
+{% if calm_fioiops_nodelabel is defined %}
+      nodeSelector:
+        {{ calm_fioiops_nodelabel.split("=")[0] }}: {{ calm_fioiops_nodelabel.split("=")[1] }}
+{% endif %}
       volumes:
       - name: output-volume
         emptyDir: {}
