--- a/roles/bench_fiorand/templates/fio_job.j2
+++ b/roles/bench_fiorand/templates/fio_job.j2
@@ -38,17 +38,17 @@ spec:
       - name: benchmark-complete
         image: rhel7
         volumeMounts:
-          - mountPath: /benchout
+          - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
           - mountPath: /dataset
             name: fio-pv
         command: ["/bin/sh"]
-        args: ["-c", "touch /benchout/benchmark.completed.txt; sleep 3600"]
+        args: ["-c", "touch {{ bench_fiorand_podoutdir }}/benchmark.completed.txt; sleep 3600"]
       initContainers:
       - name: fio-initwrite
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: /benchout
+          - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
           - mountPath: /dataset
             name: fio-pv
@@ -64,8 +64,8 @@ spec:
             --bs={{ bench_fiorand_sbs_kb }}k 
             --filesize={{ bench_fiorand_fsz_gb }}g 
             --numjobs={{ bench_fiorand_njobs }} 
-            --output=/benchout/fio.initwrite.run.txt 
-            ; ls -l /dataset > /benchout/fio.initwrite.ls_l.txt
+            --output={{ bench_fiorand_podoutdir }}/fio.initwrite.run.txt 
+            ; ls -l /dataset > {{ bench_fiorand_podoutdir }}/fio.initwrite.ls_l.txt
       - name: prepwait
         image: rhel7
         volumeMounts:
@@ -75,7 +75,7 @@ spec:
       - name: fio-randomread
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: /benchout
+          - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
           - mountPath: /dataset
             name: fio-pv
@@ -93,12 +93,12 @@ spec:
             --filesize={{ bench_fiorand_fsz_gb }}g 
             --numjobs={{ bench_fiorand_njobs }} 
             --runtime={{ bench_fiorand_run_sec }} 
-            --output=/benchout/fio.randomread.run.txt 
-            ; ls -l /dataset > /benchout/fio.randomread.ls_l.txt
+            --output={{ bench_fiorand_podoutdir }}/fio.randomread.run.txt 
+            ; ls -l /dataset > {{ bench_fiorand_podoutdir }}/fio.randomread.ls_l.txt
       - name: fio-randomwrite
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: /benchout
+          - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
           - mountPath: /dataset
             name: fio-pv
@@ -108,6 +108,7 @@ spec:
           - > 
             fio --name=randomwrite --rw=randwrite 
             --ioengine=libaio --direct=1 
+            --end_fsync=1 
             --time_based=1 
             --directory=/dataset 
             --filename_format='f.$jobnum.$filenum'
@@ -116,7 +117,7 @@ spec:
             --filesize={{ bench_fiorand_fsz_gb }}g 
             --numjobs={{ bench_fiorand_njobs }} 
             --runtime={{ bench_fiorand_run_sec }} 
-            --output=/benchout/fio.randomwrite.run.txt 
-            ; ls -l /dataset > /benchout/fio.randomwrite.ls_l.txt
+            --output={{ bench_fiorand_podoutdir }}/fio.randomwrite.run.txt 
+            ; ls -l /dataset > {{ bench_fiorand_podoutdir }}/fio.randomwrite.ls_l.txt
       restartPolicy: Never
 ...
