--- a/roles/bench_fiorand/templates/fioprep_job.j2
+++ b/roles/bench_fiorand/templates/fioprep_job.j2
@@ -13,12 +13,14 @@ spec:
       nodeSelector:
         {{ bench_fiorand_nodelabel.split("=")[0] }}: {{ bench_fiorand_nodelabel.split("=")[1] }}
 {% endif %}
+
       volumes:
       - name: output-volume
         emptyDir: {}
       - name: fio-pv
         persistentVolumeClaim:
           claimName: fio-pv-claim
+
       containers:
       - name: benchmark-complete
         image: rhel7
@@ -50,8 +52,8 @@ spec:
             --bs={{ bench_fiorand_sbs_kb }}k 
             --filesize={{ bench_fiorand_fsz_gb }}g 
             --numjobs={{ bench_fiorand_njobs }} 
-            --output={{ bench_fiorand_podoutdir }}/fio.initwrite.run.txt 
-            ; chmod -R 777 /dataset
+            --output={{ bench_fiorand_podoutdir }}/fio.initwrite.out.txt 
+            ; chmod -R a+rw /dataset
             ; ls -l /dataset > {{ bench_fiorand_podoutdir }}/fio.initwrite.ls_l.txt
 
       restartPolicy: Never
