--- a/roles/bench_fiorand/templates/fiorun_job.j2
+++ b/roles/bench_fiorand/templates/fiorun_job.j2
@@ -55,8 +55,32 @@ spec:
             --filesize={{ bench_fiorand_fsz_gb }}g 
             --numjobs={{ bench_fiorand_njobs }} 
             --runtime={{ bench_fiorand_run_sec }} 
-            --output={{ bench_fiorand_podoutdir }}/fio.randomread.run.txt 
+            --output={{ bench_fiorand_podoutdir }}/fio.randomread.out.txt 
             ; ls -l /dataset > {{ bench_fiorand_podoutdir }}/fio.randomread.ls_l.post.txt
+
+      - name: fio-randomwrite
+        image: quay.io/mpillai/fio
+        volumeMounts:
+          - mountPath: {{ bench_fiorand_podoutdir }}
+            name: output-volume
+          - mountPath: /dataset
+            name: fio-pv
+        command: ["/bin/sh"]
+        args:
+          - "-c" 
+          - > 
+            fio --name=randomwrite --rw=randwrite 
+            --ioengine=libaio --direct=1 
+            --time_based=1 
+            --directory=/dataset 
+            --filename_format='f.$jobnum.$filenum'
+            --iodepth={{ bench_fiorand_iodepth }} 
+            --bs={{ bench_fiorand_bs_kb }}k 
+            --filesize={{ bench_fiorand_fsz_gb }}g 
+            --numjobs={{ bench_fiorand_njobs }} 
+            --runtime={{ bench_fiorand_run_sec }} 
+            --output={{ bench_fiorand_podoutdir }}/fio.randomwrite.out.txt 
+            ; ls -l /dataset > {{ bench_fiorand_podoutdir }}/fio.randomwrite.ls_l.post.txt
 
       restartPolicy: Never
 ...
