minor comment fixes

--- a/roles/bench_fiorand/templates/fiorun_job.j2
+++ b/roles/bench_fiorand/templates/fiorun_job.j2
@@ -40,6 +40,9 @@ spec:
           - mountPath: /dataset
             name: fio-pv
         command: ["/bin/sh"]
+{# 
+        seeing some mount-time I/O activity; added sleep to demarcate run phase 
+#}
         args:
           - "-c" 
           - > 
