--- a/roles/bench_fiorand/templates/fiopvc.j2
+++ b/roles/bench_fiorand/templates/fiopvc.j2
@@ -9,4 +9,8 @@ spec:
   resources:
     requests:
       storage: {{ bench_fiorand_pvcsize_gb }}Gi
+{% if bench_fiorand_storageclass is defined %}
+  storageClassName: {{ bench_fiorand_storageclass }}
+{% endif %}
+
 ...
