--- a/roles/calm_fioiops/templates/fio_statefulset.j2
+++ b/roles/calm_fioiops/templates/fio_statefulset.j2
@@ -93,5 +93,8 @@ spec:
       resources:
         requests:
           storage: {{ calm_fioiops_pvcsize_gb }}Gi
+{% if calm_fioiops_storageclass is defined %}
+      storageClassName: {{ calm_fioiops_storageclass }}
+{% endif %}
 
 ...
