--- a/obsolete/bench_fiorand/templates/fioprep_job.j2
+++ b/obsolete/bench_fiorand/templates/fioprep_job.j2
@@ -17,6 +17,9 @@ spec:
       volumes:
       - name: output-volume
         emptyDir: {}
+      - name: fio-pv
+        persistentVolumeClaim:
+          claimName: fio-pv-claim
 
       containers:
       - name: benchmark-complete
@@ -24,35 +27,34 @@ spec:
         volumeMounts:
           - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
+          - mountPath: /dataset
+            name: fio-pv
         command: ["/bin/sh"]
         args: ["-c", "touch {{ bench_fiorand_podoutdir }}/benchmark.init.completed.txt; sleep 3600"]
 
       initContainers:
-
-      - name: fio-checkfiles
-        image: quay.io/mpillai/fio
-        volumeMounts:
-          - mountPath: {{ bench_fiorand_podoutdir }}
-            name: output-volume
-        command: ["/bin/sh"]
-        args:
-          - "-c"
-          - >
-            sleep 60
-
       - name: fio-initwrite
         image: quay.io/mpillai/fio
         volumeMounts:
           - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
+          - mountPath: /dataset
+            name: fio-pv
         command: ["/bin/sh"]
         args:
           - "-c" 
           - > 
-            fio 
-            --output={{ bench_fiorand_podoutdir }}/fio.initwrite.run.txt
-            --client={{ bench_fiorand_podoutdir }}/hostlist
-            {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            fio --name=initwrite --rw=write 
+            --ioengine=sync --direct=0 
+            --create_on_open=1 --end_fsync=1 
+            --directory=/dataset 
+            --filename_format='f.$jobnum.$filenum'
+            --bs={{ bench_fiorand_sbs_kb }}k 
+            --filesize={{ bench_fiorand_fsz_gb }}g 
+            --numjobs={{ bench_fiorand_njobs }} 
+            --output={{ bench_fiorand_podoutdir }}/fio.initwrite.out.txt 
+            ; chmod -R a+rw /dataset
+            ; ls -l /dataset > {{ bench_fiorand_podoutdir }}/fio.initwrite.ls_l.txt
 
       restartPolicy: Never
 ...
