--- a/roles/bench_fiorand/templates/fioprep_job.j2
+++ b/roles/bench_fiorand/templates/fioprep_job.j2
@@ -29,7 +29,7 @@ spec:
 
       initContainers:
 
-      - name: fio-checkfiles
+      - name: fio-genhosts
         image: quay.io/mpillai/fio
         volumeMounts:
           - mountPath: {{ bench_fiorand_podoutdir }}
@@ -38,7 +38,31 @@ spec:
         args:
           - "-c"
           - >
-            sleep 60
+            touch {{ bench_fiorand_podoutdir }}/hostlist
+{% for ii in range(bench_fiorand_ninstances) %}
+            ; echo {{ bench_fiorand_serverlist[ii] }} >> {{ bench_fiorand_podoutdir }}/hostlist
+{% endfor %}
+
+      - name: fio-genjob
+        image: quay.io/mpillai/fio
+        volumeMounts:
+          - mountPath: {{ bench_fiorand_podoutdir }}
+            name: output-volume
+        command: ["/bin/sh"]
+        args:
+          - "-c"
+          - >
+            echo [initwrite] > {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo rw=write >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo ioengine=sync >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo direct=0 >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo create_on_open=1 >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo end_fsync=1 >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo directory={{ bench_fiorand_datadir }} >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo filename_format='f.$jobnum.$filenum' >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo bs={{ bench_fiorand_sbs_kb }}k >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo filesize={{ bench_fiorand_fsz_gb }}g >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
+            ; echo numjobs={{ bench_fiorand_njobs }} >> {{ bench_fiorand_podoutdir }}/jobfile.fioinit
 
       - name: fio-initwrite
         image: quay.io/mpillai/fio
