--- a/roles/bench_fiorand/templates/fioprep_job.j2
+++ b/roles/bench_fiorand/templates/fioprep_job.j2
@@ -17,6 +17,11 @@ spec:
       volumes:
       - name: output-volume
         emptyDir: {}
+{% if not bench_fiorand_distributed %}
+      - name: fio-pv
+        persistentVolumeClaim:
+          claimName: fio-pv-claim
+{% endif %}
 
       containers:
       - name: benchmark-complete
@@ -24,11 +29,16 @@ spec:
         volumeMounts:
           - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
+{% if not bench_fiorand_distributed %}
+          - mountPath: {{ bench_fiorand_datadir }}
+            name: fio-pv
+{% endif %}
         command: ["/bin/sh"]
         args: ["-c", "touch {{ bench_fiorand_podoutdir }}/benchmark.init.completed.txt; sleep 3600"]
 
       initContainers:
 
+{% if bench_fiorand_distributed %}
       - name: fio-genhosts
         image: quay.io/mpillai/fio
         volumeMounts:
@@ -42,6 +52,7 @@ spec:
 {% for ii in range(bench_fiorand_ninstances) %}
             ; echo {{ bench_fiorand_serverlist[ii] }} >> {{ bench_fiorand_podoutdir }}/hostlist
 {% endfor %}
+{% endif %}
 
       - name: fio-genjob
         image: quay.io/mpillai/fio
@@ -71,13 +82,19 @@ spec:
         volumeMounts:
           - mountPath: {{ bench_fiorand_podoutdir }}
             name: output-volume
+{% if not bench_fiorand_distributed %}
+          - mountPath: {{ bench_fiorand_datadir }}
+            name: fio-pv
+{% endif %}
         command: ["/bin/sh"]
         args:
           - "-c" 
           - > 
             fio 
             --output={{ bench_fiorand_podoutdir }}/fio.initwrite.run.txt
+{% if bench_fiorand_distributed %}
             --client={{ bench_fiorand_podoutdir }}/hostlist
+{% endif %}
             {{ bench_fiorand_podoutdir }}/jobfile.fioinit
 
       restartPolicy: Never
