--- a/roles/bench_fioseq/templates/fio_job.j2
+++ b/roles/bench_fioseq/templates/fio_job.j2
@@ -1,21 +1,4 @@
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: fio-pv-claim
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: {{ bench_fioseq_pvcsize_gb }}Gi
-{% if bench_fioseq_storageclass is defined %}
-  storageClassName: {{ bench_fioseq_storageclass }}
-{% endif %}
-
-...
-
----
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -24,66 +7,82 @@ spec:
   template:
     metadata:
       labels:
-        type: benchmark-pod
+        {{ bench_fioseq_podlabel.split("=")[0] }}: {{ bench_fioseq_podlabel.split("=")[1] }}
     spec:
+{% if bench_fioseq_nodelabel is defined %}
+      nodeSelector:
+        {{ bench_fioseq_nodelabel.split("=")[0] }}: {{ bench_fioseq_nodelabel.split("=")[1] }}
+{% endif %}
+
       volumes:
       - name: output-volume
         emptyDir: {}
-      - name: fio-pv
-        persistentVolumeClaim:
-          claimName: fio-pv-claim
+
       containers:
       - name: benchmark-complete
         image: rhel7
         volumeMounts:
-          - mountPath: /benchout
+          - mountPath: {{ bench_fioseq_podoutdir }}
             name: output-volume
-          - mountPath: /dataset
-            name: fio-pv
         command: ["/bin/sh"]
-        args: ["-c", "touch /benchout/benchmark.completed.txt; sleep 3600"]
+        args: ["-c", "touch {{ bench_fioseq_podoutdir }}/benchmark.{{ bench_fioseq_test }}.completed.txt; sleep 3600"]
+
       initContainers:
-      - name: fio-initwrite
+
+      - name: fio-genhosts
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: /benchout
+          - mountPath: {{ bench_fioseq_podoutdir }}
             name: output-volume
-          - mountPath: /dataset
-            name: fio-pv
+        command: ["/bin/sh"]
+        args:
+          - "-c"
+          - >
+            touch {{ bench_fioseq_podoutdir }}/hostlist
+{% for ii in range(bench_fioseq_ninstances) %}
+            ; echo {{ bench_fioseq_serverlist[ii] }} >> {{ bench_fioseq_podoutdir }}/hostlist
+{% endfor %}
+
+      - name: fio-genjob
+        image: quay.io/mpillai/fio
+        volumeMounts:
+          - mountPath: {{ bench_fioseq_podoutdir }}
+            name: output-volume
+        command: ["/bin/sh"]
+        args:
+          - "-c"
+          - |
+            cat > {{ bench_fioseq_podoutdir }}/jobfile.{{ bench_fioseq_test }} <<EOF
+            [{{ bench_fioseq_test }}]
+{% if bench_fioseq_test == "seqwr"  %}
+            rw=write 
+            create_on_open=1
+            end_fsync=1
+{% elif bench_fioseq_test == "seqrd" %}
+            rw=read 
+{% endif %}
+            ioengine=sync 
+            direct=0
+            directory={{ bench_fioseq_datadir }}
+            filename_format=f.\$jobnum.\$filenum
+            bs={{ bench_fioseq_bs_kb }}k
+            filesize={{ bench_fioseq_fsz_gb }}g
+            numjobs={{ bench_fioseq_njobs }}
+            EOF
+
+      - name: fio-{{ bench_fioseq_test }}
+        image: quay.io/mpillai/fio
+        volumeMounts:
+          - mountPath: {{ bench_fioseq_podoutdir }}
+            name: output-volume
         command: ["/bin/sh"]
         args:
           - "-c" 
           - > 
-            fio --name=initwrite --rw=write 
-            --ioengine=sync --direct=0 
-            --create_on_open=1 --end_fsync=1 
-            --directory=/dataset 
-            --filename_format='f.$jobnum.$filenum'
-            --bs={{ bench_fioseq_bs_kb }}k 
-            --filesize={{ bench_fioseq_fsz_gb }}g 
-            --numjobs={{ bench_fioseq_njobs }} 
-            --output=/benchout/fio.initwrite.run.txt 
-            ; ls -l /dataset > /benchout/fio.initwrite.ls_l.txt
-      - name: fio-seqread
-        image: quay.io/mpillai/fio
-        volumeMounts:
-          - mountPath: /benchout
-            name: output-volume
-          - mountPath: /dataset
-            name: fio-pv
-        command: ["/bin/sh"]
-        args:
-          - "-c" 
-          - > 
-            fio --name=seqread --rw=read 
-            --ioengine=sync --direct=0 
-            --create_on_open=1
-            --directory=/dataset 
-            --filename_format='f.$jobnum.$filenum'
-            --bs={{ bench_fioseq_bs_kb }}k 
-            --filesize={{ bench_fioseq_fsz_gb }}g 
-            --numjobs={{ bench_fioseq_njobs }} 
-            --output=/benchout/fio.seqread.run.txt 
-            ; ls -l /dataset > /benchout/fio.seqread.ls_l.txt
+            fio 
+            --output={{ bench_fioseq_podoutdir }}/fio.{{ bench_fioseq_test }}.run.txt
+            --client={{ bench_fioseq_podoutdir }}/hostlist
+            {{ bench_fioseq_podoutdir }}/jobfile.{{ bench_fioseq_test }}
+
       restartPolicy: Never
 ...
