migrate to newer API version

--- a/roles/calm_fioiops/templates/fio_statefulset.j2
+++ b/roles/calm_fioiops/templates/fio_statefulset.j2
@@ -14,11 +14,14 @@ spec:
     role: calm-fioiops
 ...
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: calm-fioiops
 spec:
+  selector:
+    matchLabels:
+      role: calm-fioiops
   serviceName: "calm-fioiops"
   podManagementPolicy: "Parallel"
   replicas: {{ calm_fioiops_replicas }}
