--- a/roles/db_mongodb/templates/mongodb_replicated.j2
+++ b/roles/db_mongodb/templates/mongodb_replicated.j2
@@ -13,11 +13,14 @@ spec:
   selector:
     role: mongo
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mongo
 spec:
+  selector:
+    matchLabels:
+      role: mongo
   serviceName: "mongo"
   replicas: {{ db_mongodb_replicas }}
   template:
