working benchmark fio_random

--- a/kubuculum/benchmarks/fio_random/templates/fio_random.run.job.j2
+++ b/kubuculum/benchmarks/fio_random/templates/fio_random.run.job.j2
@@ -9,10 +9,11 @@ spec:
       labels:
         type: benchmark-pod
     spec:
-{% if bench_fiorand_nodelabel is defined %}
+{% if nodeselector is defined %}
       nodeSelector:
-        {{ bench_fiorand_nodelabel.split("=")[0] }}: {{ bench_fiorand_nodelabel.split("=")[1] }}
+        {{ nodeselector.split("=")[0] }}: {{ nodeselector.split("=")[1] }}
 {% endif %}
+
       volumes:
       - name: output-volume
         emptyDir: {}
@@ -21,108 +22,108 @@ spec:
       - name: benchmark-complete
         image: rhel7
         volumeMounts:
-          - mountPath: {{ bench_fiorand_podoutdir }}
+          - mountPath: {{ podoutdir }}
             name: output-volume
         command: ["/bin/sh"]
-        args: ["-c", "touch {{ bench_fiorand_podoutdir }}/benchmark.run.completed.txt; sleep 3600"]
+        args: ["-c", "touch {{ podoutdir }}/benchmark.run.completed.txt; sleep 3600"]
 
       initContainers:
 
       - name: fio-genhosts
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: {{ bench_fiorand_podoutdir }}
+          - mountPath: {{ podoutdir }}
             name: output-volume
         command: ["/bin/sh"]
         args:
           - "-c"
           - >
-            touch {{ bench_fiorand_podoutdir }}/hostlist
-{% for ii in range(bench_fiorand_ninstances) %}
-            ; echo {{ bench_fiorand_serverlist[ii] }} >> {{ bench_fiorand_podoutdir }}/hostlist
+            touch {{ podoutdir }}/hostlist
+{% for ii in range(ninstances) %}
+            ; echo {{ serverlist[ii] }} >> {{ podoutdir }}/hostlist
 {% endfor %}
 
-{% if bench_fiorand_testread %}
+{% if testrread %}
 
       - name: fio-genrreadjob
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: {{ bench_fiorand_podoutdir }}
+          - mountPath: {{ podoutdir }}
             name: output-volume
         command: ["/bin/sh"]
         args:
           - "-c"
           - |
-            cat > {{ bench_fiorand_podoutdir }}/jobfile.fiorandread <<EOF
+            cat > {{ podoutdir }}/jobfile.fiorandread <<EOF
             [randomread]
             rw=randread
             ioengine=libaio
             direct=1
-            iodepth={{ bench_fiorand_iodepth }}
+            iodepth={{ iodepth }}
             time_based=1
-            runtime={{ bench_fiorand_run_sec }}
-            directory={{ bench_fiorand_datadir }}
+            runtime={{ runtime_sec }}
+            directory={{ datadir }}
             filename_format=f.\$jobnum.\$filenum
-            bs={{ bench_fiorand_bs_kb }}k
-            filesize={{ bench_fiorand_fsz_gb }}g
-            numjobs={{ bench_fiorand_njobs }}
+            bs={{ bs_kb }}k
+            filesize={{ filesize_gb }}g
+            numjobs={{ numjobs }}
             EOF
 
       - name: fio-randomread
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: {{ bench_fiorand_podoutdir }}
+          - mountPath: {{ podoutdir }}
             name: output-volume
         command: ["/bin/sh"]
         args:
           - "-c"
           - >
             fio
-            --output={{ bench_fiorand_podoutdir }}/fio.randread.run.txt
-            --client={{ bench_fiorand_podoutdir }}/hostlist
-            {{ bench_fiorand_podoutdir }}/jobfile.fiorandread
+            --output={{ podoutdir }}/fio.randread.run.txt
+            --client={{ podoutdir }}/hostlist
+            {{ podoutdir }}/jobfile.fiorandread
 
 {% endif %}
 
-{% if bench_fiorand_testwrite %}
+{% if testrwrite %}
 
       - name: fio-genrwritejob
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: {{ bench_fiorand_podoutdir }}
+          - mountPath: {{ podoutdir }}
             name: output-volume
         command: ["/bin/sh"]
         args:
           - "-c"
           - |
-            cat > {{ bench_fiorand_podoutdir }}/jobfile.fiorandwrite <<EOF
+            cat > {{ podoutdir }}/jobfile.fiorandwrite <<EOF
             [randomwrite]
             rw=randwrite
             ioengine=libaio
             direct=1
-            iodepth={{ bench_fiorand_iodepth }}
+            iodepth={{ iodepth }}
             time_based=1
-            runtime={{ bench_fiorand_run_sec }}
-            directory={{ bench_fiorand_datadir }}
+            runtime={{ runtime_sec }}
+            directory={{ datadir }}
             filename_format=f.\$jobnum.\$filenum
-            bs={{ bench_fiorand_bs_kb }}k
-            filesize={{ bench_fiorand_fsz_gb }}g
-            numjobs={{ bench_fiorand_njobs }}
+            bs={{ bs_kb }}k
+            filesize={{ filesize_gb }}g
+            numjobs={{ numjobs }}
             EOF
 
       - name: fio-randomwrite
         image: quay.io/mpillai/fio
         volumeMounts:
-          - mountPath: {{ bench_fiorand_podoutdir }}
+          - mountPath: {{ podoutdir }}
             name: output-volume
         command: ["/bin/sh"]
         args:
           - "-c"
           - >
             fio
-            --output={{ bench_fiorand_podoutdir }}/fio.randwrite.run.txt
-            --client={{ bench_fiorand_podoutdir }}/hostlist
-            {{ bench_fiorand_podoutdir }}/jobfile.fiorandwrite
+            --output={{ podoutdir }}/fio.randwrite.run.txt
+            --client={{ podoutdir }}/hostlist
+            {{ podoutdir }}/jobfile.fiorandwrite
 
 {% endif %}
 
