fio_random: add rate_iops support

--- a/kubuculum/benchmarks/fio_random/templates/fio_random.run.job.j2
+++ b/kubuculum/benchmarks/fio_random/templates/fio_random.run.job.j2
@@ -60,6 +60,9 @@ spec:
             ioengine=libaio
             direct=1
             iodepth={{ iodepth }}
+{% if rate_iops is defined %}
+            rate_iops={{ rate_iops }}
+{% endif %}
             time_based=1
             runtime={{ runtime_sec }}
             directory={{ datadir }}
@@ -102,6 +105,9 @@ spec:
             ioengine=libaio
             direct=1
             iodepth={{ iodepth }}
+{% if rate_iops is defined %}
+            rate_iops={{ rate_iops }}
+{% endif %}
             time_based=1
             runtime={{ runtime_sec }}
             directory={{ datadir }}
